--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Hungry Game</title>
+        <title>Really Hungry Hippos</title>
         <style type="text/css">
             @font-face {
                 font-family: slkscr;
@@ -18,7 +18,7 @@
         <script src="phaser.min.js"></script>
     </head>
     <body>
-        <h1>Hungry Game</h1>
+        <h1>Really Hungry Hippos</h1>
         
         <script src="game.js"></script>
 
