--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </head>
     <body>
         <h1>Really Hungry Hippos</h1>
+        <ul>
+            <li>Click or tap to eat</li>
+        </ul>
         
         <script src="game.js"></script>
 
