--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>Click or tap to eat</li>
         </ul>
         
-        <script src="game.js"></script>
+        <script src="game2.js"></script>
 
     </body>
 </html>
