added starting state

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h1>Really Hungry Hippos</h1>
         <ul>
             <li>Click or tap to eat</li>
+            <li>Collect as much food as you can in the time limit to win!</li>
         </ul>
         
         <script src="game.js"></script>
