--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 margin-bottom: 40px;
             }
         </style>
-        <script src="phaser.min.js"></script>
+        <script src="js/phaser.min.js"></script>
     </head>
     <body>
         <div id="container">
@@ -33,7 +33,7 @@
             <p><a href="https://github.com/interphased/really-hungry-hippos">View on Github</a></p>
         </div>
 
-        <script src="game.js"></script>
+        <script src="js/game.js"></script>
 
     </body>
 </html>
