--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div id="container">
             <h1>Really Hungry Hippos</h1>
             <ul>
-                <li>Click or tap to eat</li>
-                <li>Collect as much food as you can in the time limit to win!</li>
+                <li>Click or tap anywhere to eat</li>
+                <li>Eat more food than your opponents to win!</li>
             </ul>
             <div id="game"></div>
             <p><a href="https://github.com/interphased/really-hungry-hippos">View on Github</a></p>
