--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <li>Eat more food than your opponents to win!</li>
             </ul>
             <div id="game"></div>
-            <p><a href="https://github.com/interphased/really-hungry-hippos">View on Github</a></p>
+            <p><a href="https://github.com/interphased/really-hungry-hippos">View on Github</a> | <a href="https://bacongamejam.org/jams/bacongamejam-07/243/">Made for Bacon Game Jam 7</a></p>
+            <p>Created by Ryan Kent (<a href="https://twitter.com/interphased">@interphased</a>)</p>
         </div>
 
         <script src="js/game.js"></script>
